the builings are fetched and the tasks are fetched. Still need to filter the tasks from selecting building

--- a/interface/src/sass/task.scss
+++ b/interface/src/sass/task.scss
@@ -1,3 +1,12 @@
+#root {
+  .Task {
+    padding-top: var(--m-padding);
+  }
+  .Task h6 {
+    text-transform: uppercase;
+  }
+}
+
 [data-state="hidden"] {
   .accordion-body {
     /* animation: close ease-out 1 forwards; */
