--- a/interface/src/sass/media.scss
+++ b/interface/src/sass/media.scss
@@ -4,6 +4,7 @@
   padding: 20px 20px 15px 35px;
   border: 1px solid rgba(72, 94, 144, 0.16);
   border-top: none;
+  position: relative;
   svg {
     width: 30px;
     height: 30px;
