navigationen -> start/reset. showing no tasks if nothing gets read from json

--- a/interface/src/sass/nav.scss
+++ b/interface/src/sass/nav.scss
@@ -41,4 +41,22 @@
   .message {
     height: auto;
   }
+
+  .unfinished-container {
+    padding: 2rem 1rem 1rem;
+    color: #707070;
+  }
+  .infobox {
+    padding: 1rem 0;
+  }
+  .custom-control {
+    padding: 0.25rem 1.5rem;
+  }
+  .custom-control:nth-child(2) {
+    padding: 0.25rem 1.5rem 0.5rem;
+  }
+
+  .required {
+    color: #dc3545;
+  }
 }
