--- a/interface/src/sass/style.scss
+++ b/interface/src/sass/style.scss
@@ -26,6 +26,22 @@ body {
 .hide {
   display: none;
 }
+.assistant-interface {
+  height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+}
+
+#root::-webkit-scrollbar,
+.assistant-interface::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: #f5f6fa;
+}
+
+.assistant-interface::-webkit-scrollbar-thumb {
+  background-color: rgb(199, 199, 199);
+  border-radius: 20px;
+}
 
 #root {
   position: relative;
@@ -42,6 +58,7 @@ body {
     padding: var(--m-padding);
     width: 100%;
     margin: 0;
+    min-height: 100vh;
   }
 
   .Task {
