--- a/interface/src/sass/media.scss
+++ b/interface/src/sass/media.scss
@@ -50,3 +50,16 @@
     padding: 20px 20px 15px 35px;
   }
 }
+
+@media (min-width: 500px) {
+  .Media {
+    max-width: 60%;
+    border-right: none;
+  }
+}
+@media (min-width: 650px) {
+  .Media {
+    max-width: 40%;
+    border-right: none;
+  }
+}
