--- a/interface/src/sass/style.scss
+++ b/interface/src/sass/style.scss
@@ -28,7 +28,7 @@ body {
 }
 .assistant-interface {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
 }
 
@@ -41,6 +41,16 @@ body {
 .assistant-interface::-webkit-scrollbar-thumb {
   background-color: rgb(199, 199, 199);
   border-radius: 20px;
+}
+
+input[type="checkbox"],
+svg,
+.accordion-title,
+.accordion-body,
+label,
+select,
+.Popover li {
+  cursor: pointer;
 }
 
 #root {
@@ -61,14 +71,11 @@ body {
     min-height: 100vh;
   }
 
-  .Task {
+  .Task,
+  .Popup {
     padding-top: var(--m-padding);
   }
 
-  .Popup {
-    background-color: rgb(234, 252, 234);
-    padding: var(--m-padding);
-  }
   .section-bg {
     background-color: #fff;
     box-shadow: 0 0 10px rgba(28, 39, 60, 0.05);
