styled ipad horisontal and most of ipad vertical with the change of grid

--- a/interface/src/sass/media.scss
+++ b/interface/src/sass/media.scss
@@ -1,4 +1,4 @@
-.Media {
+#root .Media {
   display: flex;
   justify-content: space-between;
   padding: 20px 20px 15px 35px;
@@ -14,6 +14,12 @@
     width: 34px;
     transform: translateY(-2px) translateX(-2px);
     stroke-width: 0.9px;
+  }
+
+  svg.video,
+  svg.docs {
+    transition: 0.5s;
+    stroke: #0168fa;
   }
 }
 
@@ -52,14 +58,13 @@
 }
 
 @media (min-width: 500px) {
-  .Media {
+  #root .Media {
     max-width: 60%;
-    border-right: none;
+    border-right-color: transparent;
   }
 }
 @media (min-width: 650px) {
-  .Media {
+  #root .Media {
     max-width: 40%;
-    border-right: none;
   }
 }
