--- a/interface/src/sass/nav.scss
+++ b/interface/src/sass/nav.scss
@@ -134,4 +134,9 @@
     position: static;
     transform: translateY(0);
   }
+
+  #Nav .back {
+    position: absolute;
+    transform: translateY(-5.3rem);
+  }
 }
