--- a/interface/src/sass/style.scss
+++ b/interface/src/sass/style.scss
@@ -98,4 +98,12 @@ select,
     font-size: 11px;
     line-height: 1.773;
   }
+
+  .spinner-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+  }
 }
