--- a/interface/src/sass/switch.scss
+++ b/interface/src/sass/switch.scss
@@ -27,3 +27,7 @@
   padding: 20px 20px 20px 35px;
   border-bottom: 1px solid #d5d5d5;
 }
+.feather-check {
+  margin-top: 0.4rem;
+  margin-left: 1rem;
+}
