--- a/interface/src/sass/popover.scss
+++ b/interface/src/sass/popover.scss
@@ -9,9 +9,6 @@
   z-index: 2;
   left: 5%;
 
-  .Popover ul {
-    position: relative;
-  }
   .triangle-wrapper {
     position: absolute;
     width: 100%;
@@ -75,6 +72,8 @@
 
   ul li {
     list-style: none;
+
+    line-height: 2rem;
   }
 }
 
@@ -93,6 +92,53 @@
     .docs-triangle-outer {
       transition: 0.5s;
       transform: translateX(-192%) translateY(16px);
+    }
+  }
+}
+
+@media (min-width: 900px) {
+  #root .Popover {
+    bottom: auto;
+    top: 0.5rem;
+    left: 6rem;
+    min-height: 180px;
+
+    .wrapper-move {
+      transform: none;
+    }
+
+    .triangle-wrapper {
+      position: static;
+    }
+
+    .inner-triangle {
+      border-top: 15px solid transparent;
+      border-right: 15px solid white;
+    }
+    .outer-triangle {
+      border-top: 16px solid transparent;
+      border-right: 16px solid rgba(28, 39, 60, 0.05);
+    }
+    .video-triangle-inner {
+      transform: translateX(0) translateY(0);
+      top: 0.5rem;
+      left: -1.8rem;
+    }
+    .video-triangle-outer {
+      transform: translateX(0) translateY(0);
+      top: 0.4rem;
+      left: -2.05rem;
+    }
+
+    .docs-triangle-inner {
+      transform: translateX(0) translateY(0);
+      top: 8.5rem;
+      left: -1.8rem;
+    }
+    .docs-triangle-outer {
+      transform: translateX(0) translateY(0);
+      top: 8.4rem;
+      left: -2.05rem;
     }
   }
 }
