--- a/interface/src/sass/popup.scss
+++ b/interface/src/sass/popup.scss
@@ -64,20 +64,20 @@
       height: auto;
     }
     ul.video li {
-      /* DET PINKE SKAL VÆRE VIDEOEN */
-      background-color: pink;
+      /* DET BLÅ SKAL VÆRE VIDEOEN */
+      background-color: rgb(195, 205, 229);
       width: 600px;
       height: 400px;
     }
     ul.docs li {
-      /* DET PINKE SKAL VÆRE DOKUMENTET */
-      background-color: pink;
+      /* DET BLÅ SKAL VÆRE DOKUMENTET */
+      background-color: rgb(195, 205, 229);
       width: 550px;
       height: 700px;
     }
     ul.image li {
-      /* DET PINKE SKAL VÆRE BILLEDET */
-      background-color: pink;
+      /* DET BLÅ SKAL VÆRE BILLEDET */
+      background-color: rgb(195, 205, 229);
       width: 600px;
       height: 400px;
       position: relative;
