--- a/interface/src/sass/popup.scss
+++ b/interface/src/sass/popup.scss
@@ -72,8 +72,8 @@
     ul.docs li {
       /* DET BLÅ SKAL VÆRE DOKUMENTET */
       background-color: rgb(195, 205, 229);
-      width: 550px;
-      height: 700px;
+      width: 70vw;
+      height: 80vh;
     }
     ul.image li {
       /* DET BLÅ SKAL VÆRE BILLEDET */
