--- a/interface/src/sass/task.scss
+++ b/interface/src/sass/task.scss
@@ -35,17 +35,40 @@
   .blue-text {
     color: #0168fa;
   }
+
   /*   .accordion-wrapper {
-    height: 118px;
-  }
-  .accordion-body p:nth-child(1) {
-    height: 40px;
+    box-shadow: 0 0 10px rgba(28, 39, 60, 0.05);
   } */
+
+  #accordion2 [data-state="start"] {
+    border: 1px solid rgba(72, 94, 144, 0.16);
+    border-radius: 0.2rem;
+    height: 118px;
+    overflow: hidden;
+    .accordion-wrapper {
+      height: 118px;
+    }
+    .accordion-body p:nth-child(1) {
+      height: 40px;
+    }
+
+    .accordion-body {
+      overflow: hidden;
+    }
+    .Switch > .custom-control {
+      display: none;
+    }
+    .accordion-body > p:nth-child(1) {
+      max-height: 40px;
+      overflow: hidden;
+    }
+  }
 }
 
 #accordion2 [data-state="hidden"] {
-  animation: gray-border 1s ease-in-out 1 forwards;
+  animation: gray-border 1s linear 1 forwards;
   border-radius: 0.2rem;
+  border: 1px solid rgba(72, 94, 144, 0.16);
 
   @keyframes gray-border {
     0% {
@@ -58,7 +81,7 @@
   .read-more {
     display: block;
     opacity: 0;
-    animation: read-fade-in 0.5s 0.5s ease-in-out 1 forwards;
+    animation: read-fade-in 0.5s 0.5s linear 1 forwards;
   }
   @keyframes read-fade-in {
     0% {
@@ -69,7 +92,7 @@
     }
   }
   .accordion-body {
-    animation: close 0.5s ease-out 1 forwards;
+    animation: close 0.5s linear 1 forwards;
     overflow: hidden;
   }
 
@@ -97,9 +120,8 @@
 
   .accordion-body > p:nth-child(1) {
     overflow: hidden;
-    font-family: Helvetica, sans-serif;
     width: 100%;
-    animation: fade 0.3s ease-in-out 1 forwards;
+    animation: fade 0.3s linear 1 forwards;
   }
 
   @keyframes fade {
@@ -131,8 +153,9 @@
 }
 
 #accordion2 [data-state="shown"] {
-  animation: blue-border 1s ease-in-out 1 forwards;
+  animation: blue-border 1s linear 1 forwards;
   border-radius: 0.2rem;
+  border: 1px solid #0168fa;
 
   @keyframes blue-border {
     0% {
@@ -155,7 +178,7 @@
   .accordion-body {
     height: 100%;
     max-height: 100%;
-    animation: open 2s ease-in-out 1 forwards;
+    animation: open 3s linear 1 forwards;
     overflow: hidden;
     padding-bottom: 0rem;
     p {
@@ -208,6 +231,13 @@
   }
 }
 @media (min-width: 900px) {
+  #root #accordion2 [data-state="start"] {
+    height: 71px;
+
+    .accordion-wrapper {
+      height: 71px;
+    }
+  }
   #root .accordion-wrapper {
     width: 100%;
     height: 100%;
@@ -285,7 +315,7 @@
     }
     p:nth-child(2) {
       padding-left: 0.2rem;
-      padding: 0 0 0.5rem 0.2rem;
+      padding: 0 0 0.3rem 0.2rem;
     }
   }
   #root #App .accordion-body {
@@ -313,7 +343,7 @@
   }
   #accordion2 [data-state="hidden"] {
     .Media {
-      animation: close-big 0.5s ease-out 1 forwards;
+      animation: close-big 0.5s linear 1 forwards;
       overflow: hidden;
 
       svg {
@@ -353,7 +383,6 @@
     }
 
     .Switch > .custom-control {
-      /*   display: none; */
       transition: 0.5s;
       opacity: 0;
     }
@@ -363,7 +392,7 @@
     .Media {
       height: 100%;
       max-height: 100%;
-      animation: open-big 2s ease-in-out 1 forwards;
+      animation: open-big 10s linear 1 forwards;
     }
 
     @keyframes open-big {
