--- a/interface/src/sass/task-shown.scss
+++ b/interface/src/sass/task-shown.scss
@@ -54,10 +54,23 @@
     .Media svg {
       height: 100%;
       max-height: 100%;
-      animation: open-big 0.5s linear 1 forwards;
+      animation: open-big 0.2s linear 1 forwards;
     }
+
     .accordion-body p {
-      animation: open-text 0.7s linear 1 forwards;
+      animation: open-text 0.2s linear 1 forwards;
+      scrollbar-width: none;
+    }
+
+    .accordion-body p::-webkit-scrollbar,
+    .accordion-body p::-moz-scrollbar {
+      width: 0;
+      height: 0;
+      scrollbar-width: none;
+    }
+
+    .Media svg:nth-child(2) {
+      transform: translateX(-3px);
     }
 
     @keyframes open-big {
@@ -68,7 +81,7 @@
 
       100% {
         height: auto;
-        max-height: 100px;
+        max-height: 34px;
         padding-bottom: 0rem;
       }
     }
@@ -82,7 +95,7 @@
       100% {
         height: auto;
         max-height: 500px;
-        overflow: scroll;
+        overflow: auto;
         padding-bottom: 0rem;
       }
     }
