cleaned all css and new react/js

--- a/interface/src/sass/nav.scss
+++ b/interface/src/sass/nav.scss
@@ -2,6 +2,16 @@
 # NAVIGATION
 ----------------------- */
 #Nav {
+  [data-state="hidden"] {
+    display: none;
+  }
+  [data-state="shown"] {
+    display: inline-block;
+  }
+
+  #finish svg {
+    pointer-events: none;
+  }
   select {
     display: block;
     width: 100%;
