--- a/interface/src/sass/media.scss
+++ b/interface/src/sass/media.scss
@@ -1,3 +1,7 @@
+////////////////////////
+// # MEDIA / ICON AREA
+////////////////////////
+
 .Media {
   display: flex;
   justify-content: space-between;
