--- a/interface/src/sass/popover.scss
+++ b/interface/src/sass/popover.scss
@@ -15,63 +15,57 @@
     transition: 1s;
   }
 
-  .inner-triangle {
+  .inner-triangle,
+  .outer-triangle {
     background-color: transparent;
-    border-top: 15px solid white;
     border-bottom: 15px solid transparent;
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
+    position: absolute;
+  }
+
+  .inner-triangle {
+    border-top: 15px solid white;
     height: 30px;
     width: 30px;
-    position: absolute;
   }
+
   .outer-triangle {
-    background-color: transparent;
     border-top: 16px solid rgba(28, 39, 60, 0.05);
-    border-bottom: 15px solid transparent;
-    border-left: 16px solid transparent;
-    border-right: 16px solid transparent;
     height: 34px;
     width: 34px;
-    position: absolute;
-  }
-
-  /* -----------------
-#WRAPPER
-------------------- */
-
-  .wrapper-move {
-    /*     transform: translateX(100%); */
   }
 
   /* -----------------
 # VIDEO
 ------------------- */
 
-  .video-triangle-inner {
-    transition: 0.2s;
-    transform: translateY(14px);
-    animation: slide-left 0.5s 1 forwards;
-  }
+  .video-triangle-inner,
   .video-triangle-outer {
     transition: 0.2s;
-    transform: translateY(15px);
     animation: slide-left 0.5s 1 forwards;
+  }
+  .video-triangle-inner {
+    transform: translateY(14px);
+  }
+  .video-triangle-outer {
+    transform: translateY(15px);
   }
 
   /* -----------------
 # DOCUMENTS
 ------------------- */
 
-  .docs-triangle-inner {
-    transition: 0.5s;
-    transform: translateY(14px);
-    animation: slide-right 0.5s 1 forwards;
-  }
+  .docs-triangle-inner,
   .docs-triangle-outer {
     transition: 0.5s;
-    transform: translateY(15px);
     animation: slide-right 0.5s 1 forwards;
+  }
+  .docs-triangle-inner {
+    transform: translateY(14px);
+  }
+  .docs-triangle-outer {
+    transform: translateY(15px);
   }
 
   @keyframes slide-right {
@@ -107,7 +101,6 @@
 
   ul li {
     list-style: none;
-
     line-height: 2rem;
   }
 }
@@ -121,11 +114,9 @@
 ------------------- */
 
     .docs-triangle-inner {
-      transition: 0.5s;
       transform: translateY(15px);
     }
     .docs-triangle-outer {
-      transition: 0.5s;
       transform: translateY(16px);
     }
   }
@@ -168,10 +159,6 @@
     left: 6rem;
     min-height: 180px;
 
-    .wrapper-move {
-      transform: none;
-    }
-
     .triangle-wrapper {
       position: static;
     }
@@ -184,28 +171,27 @@
       border-top: 16px solid transparent;
       border-right: 16px solid rgba(28, 39, 60, 0.05);
     }
-    .video-triangle-inner {
+    .video-triangle-inner,
+    .video-triangle-outer,
+    .docs-triangle-inner,
+    .docs-triangle-outer {
       transform: none;
       animation: none;
+    }
+    .video-triangle-inner {
       top: 0.5rem;
       left: -1.8rem;
     }
     .video-triangle-outer {
-      transform: none;
-      animation: none;
       top: 0.4rem;
       left: -2.05rem;
     }
 
     .docs-triangle-inner {
-      transform: none;
-      animation: none;
       top: 8.5rem;
       left: -1.8rem;
     }
     .docs-triangle-outer {
-      transform: none;
-      animation: none;
       top: 8.4rem;
       left: -2.05rem;
     }
