--- a/interface/src/sass/popup.scss
+++ b/interface/src/sass/popup.scss
@@ -6,6 +6,8 @@
   left: 0;
   z-index: 10;
   background-color: #fff;
+
+  padding-top: var(--m-padding);
 }
 .feather-x {
   position: absolute;
@@ -24,18 +26,20 @@
 }
 .Popup ul.video,
 .Popup ul.docs {
-  height: 100%;
-  display: flex;
-  align-items: center;
   justify-content: center;
 }
-
+.Popup ul.video,
+.Popup ul.docs,
 .Popup ul.image {
   height: 100%;
   display: flex;
+  align-items: center;
+}
+
+.Popup ul.image {
   flex-wrap: nowrap;
   flex-direction: column;
-  align-items: center;
+
   li {
     padding: 1rem;
   }
