--- a/interface/src/sass/task.scss
+++ b/interface/src/sass/task.scss
@@ -1,3 +1,7 @@
+/* --------------------
+# TASKS IN GENEREL
+----------------------- */
+
 #root {
   .Task {
     padding-bottom: var(--m-padding);
@@ -162,10 +166,7 @@
     border-bottom: 0;
 
     .custom-control {
-      /*  display: flex; */
-      /*     align-items: center; */
       position: relative;
-      /* top: 40%; */
       right: 2rem;
     }
   }
